repos/makepy/contents/test/fail/IfNoElse.rules
x = y

elif $x:
    x = q

all:
